--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<h1>Hola Mundo</h1>
+<div class="row container mt-4">
+    <div class="col-3">
+        <h2>Busqueda</h2>
+        <hr>
+        <ul class="list-group">
+            <li routerLink="" 
+                routerLinkActive="active" 
+                [routerLinkActiveOptions]="{exact: true}"
+                class="list-group-item">Buscar Pais</li>
+            <li routerLink="region" routerLinkActive="active" class="list-group-item">Por Region</li>
+            <li routerLink="capital" routerLinkActive="active" class="list-group-item">Por capital</li>
+        </ul>
+    </div>
+    <div class="col">
+        <router-outlet></router-outlet>
+    </div>
+</div>
