--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,42 @@
-<p>por-pais works!</p>
+<h2>Por Pais</h2>
+<hr>
+<div class="row">
+    <div class="col">
+        <form (ngSubmit)="buscar()" autocomplete="off">
+            <input type="text"
+                    name="termino"
+                    class="form-control"
+                    [(ngModel)]="termino"
+                    placeholder="Buscar Pais..."
+                    />
+        </form>
+    </div>
+</div>
+<hr>
+<div class="alert alert-danger">
+    No se encontro nada con el Término ABCDE
+</div>
+<div class="row">
+    <div class="col">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Bandera</th>
+                    <th>Nombre</th>
+                    <th>Poblacion</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Bandera</td>
+                    <td>Nombre</td>
+                    <td>12384</td>
+                    <td><a href="/pais/cri">Ver...</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
