--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -13,10 +13,10 @@
     </div>
 </div>
 <hr>
-<div class="alert alert-danger">
-    No se encontro nada con el Término ABCDE
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontro nada con el Término {{termino}}
 </div>
-<div class="row">
+<div *ngIf="!hayError"class="row">
     <div class="col">
         <table class="table table-hover">
             <thead>
