Se termina el video 18 del modulo 8-Spa-paises de la parte 2

--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -2,41 +2,15 @@
 <hr>
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-            <input type="text"
-                    name="termino"
-                    class="form-control"
-                    [(ngModel)]="termino"
-                    placeholder="Buscar Pais..."
-                    />
-        </form>
+        <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)"></app-pais-input>
     </div>
 </div>
 <hr>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontro nada con el Término {{termino}}
 </div>
-<div *ngIf="!hayError"class="row">
+<div *ngIf="paises.length> 0"class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Poblacion</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Bandera</td>
-                    <td>Nombre</td>
-                    <td>12384</td>
-                    <td><a href="/pais/cri">Ver...</a></td>
-                </tr>
-            </tbody>
-        </table>
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
