Empezar el video 22 del modulo 8Spa-paises de la parte 2

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -4,6 +4,6 @@
             class="form-control"
             [(ngModel)]="termino"
             (input)="teclaPresionada($event)"
-            placeholder="Buscar Pais..."
+            [placeholder]="placeholder"
             />
 </form>
