--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -14,7 +14,7 @@
             <td>
                 <img class="small-flag" [src]="pais.flags.png"> 
             </td>
-            <td>{{pais.name.common}}</td>
+            <td>{{pais.capital}},{{pais.name}}</td>
             <td>{{pais.population | number}}</td>
             <td>
                 <a [routerLink]="['/pais',pais.altSpellings[0]]">Ver...</a>
