Se debe comenzar el video numero 5 classes de css condicionales que se encuentra en la parte 2 modulo 9

--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,45 @@
-<p>ver-pais works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+    Espere por favor...
+</div>
+
+<ng-template #divPais>
+    <div class="row">
+        <div class="col-12">
+            <h1>Pais: <small>{{pais[0].name.common}}</small></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <h3>Bandera</h3>
+            <img [src]="pais[0].flags.png" class="small-flag"/>
+        </div>
+        <div class="col">
+            <h3>Informacion </h3>
+            <ul class="list-group-item">
+                <li class="list-group-item">
+                    <strong>Poblacion: </strong>{{pais[0].population | number}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Codigo numerico: </strong>{{pais[0].postalCode}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Codigo alpha3: </strong>{{pais[0].area}}
+                </li>
+            </ul>
+        </div>
+    </div>
+    <h3>Traducciones</h3>
+    <div class="row">
+        <div class="col">
+            <span class="badge bg-primary mr-1">{{pais[0].translations.deu.common}}</span>
+            <span class="badge bg-primary mr-1">{{pais[0].translations.ara.common}}</span>
+            <span class="badge bg-primary mr-1">{{pais[0].translations.ces.common}}</span>
+            <span class="badge bg-primary mr-1">{{pais[0].translations.ita.common}}</span>
+            <span class="badge bg-primary mr-1">{{pais[0].translations.jpn.common}}</span>
+            <span class="badge bg-primary mr-1">{{pais[0].translations.spa.common}}</span>
+        </div>
+    </div>
+    <!-- <pre class="mg-5">
+        {{pais| json}}
+    </pre> -->
+</ng-template>
