--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,23 @@
-<p>por-region works!</p>
+<h3>Buscar por region <small>{{regionActiva | titlecase}}</small></h3>
+<hr>
+
+<h5>Seleccione la region</h5>
+
+
+<!-- [class.btn-primary]="region=== regionActiva" -->
+
+<!-- [ngClass]="{
+    'btn-primary': regionActiva === region,
+    'btn-outline-primary': regionActiva !== region  
+  }"  -->
+
+  <div class="row">
+    <div class="col">
+        <button *ngFor="let region of regiones" 
+                class="btn btn-outline-primary"
+               
+                (click)="activarRegion(region)">
+            {{ region }}
+        </button>
+    </div>
+</div>
