--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -14,10 +14,14 @@
   <div class="row">
     <div class="col">
         <button *ngFor="let region of regiones" 
-                class="btn btn-outline-primary"
-               
+                [class]="getClaseCSS(region)"                
                 (click)="activarRegion(region)">
-            {{ region }}
+            {{ region | titlecase}}
         </button>
+    </div>
+</div>
+<div *ngIf="paises.length> 0"class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
