--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,11 +1,14 @@
-<h2>Por Capital</h2>
-<hr>
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar($event)" placeholder="Buscar Capital"></app-pais-input>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Capital</h2>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar($event)" placeholder="Buscar Capital"></app-pais-input>
+        </div>
     </div>
+    <hr>
 </div>
-<hr>
+
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontro nada con el Término {{termino}}
 </div>
