--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,11 +1,31 @@
-<h2>Por Pais</h2>
-<hr>
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)" placeholder="Buscar Pais..."></app-pais-input>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Pais</h2>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)" placeholder="Buscar Pais..."></app-pais-input>
+        </div>
     </div>
+    <ul *ngIf="mostrarSugerencia"
+        class="list-group">
+        <li *ngFor="let pais of paisesSugeridos"
+            class="list-group-item list-group-item-action">
+             <a class="nav-link"
+                [routerLink]="['/pais', pais.cca2]">
+                {{pais.name.common}}
+             </a>
+        </li>
+        <li class="list-group-item list-group-item-action"
+            (click)="buscarSugerido(termino)">            
+            <a class="nav-link">
+                Buscar "{{termino}}"
+            </a>                           
+        </li>
+    </ul>
+
+    <hr>
 </div>
-<hr>
+
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontro nada con el Término {{termino}}
 </div>
